# taichi

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .tmp_idle_source  .travis.yml  .zsh_localrc  6186.py  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  README.md  a.cpp  a.py  a.rst  a.txt  appveyor.yml  b.py  buggy.py  build-android.ps1  build.ps1  build.py  changelog.md  ci_setup.py  codecov.yml  commit  con.py  dev_setup.py  fill_c48_0_k0002_vk  format_all.sh  hello.py  hostfile  (+48 more)
chi_examples/: CMakeLists.txt  README.md  main.cpp
cpp_examples/rhi_examples/: CMakeLists.txt  common.h  common_metal.h  common_metal.mm  common_vulkan.h  sample_1_window.cpp  sample_2_triangle.cpp  sample_3_textured_triangle.cpp
examples/chi_examples/: CMakeLists.txt  README.md  main.cpp
misc/c_api_demo/: CMakeLists.txt
projects/: CMakeLists.txt
projects/lang/: CMakeLists.txt
src/: CMakeLists.txt  README.md  advection.cpp  aligned_allocator.cpp  cloth.cpp  codegen_cpu.cpp  common.cpp  expression.h  ir.cpp  ir.h  kernel.cpp  kernel.h  llvm_fwd.h  math.cpp  math.h  matmul.cpp  mgpcg.cpp  mgpcg_smoke.cpp  mpm.cpp  optimizer.cpp  program.cpp  program.h  python_bindings.cpp  run_taichi.cpp  scratch_pad.cpp  scratch_pad.h  snode.cpp  snode.h  sound.cpp  sound.h  sph.cpp  statements.h  stencil.cpp  stencil.h  struct_compiler.h  structural_node.cpp  structural_node.h  taichi.cpp  taichi.h  taichi_grid.cpp  (+8 more)
src/analysis/: value_diff.cpp
src/backends/: base.cpp  base.h  codegen_cuda.cpp  codegen_cuda.h  codegen_llvm.h  codegen_llvm_ptx.cpp  codegen_llvm_x86.cpp  codegen_x86.cpp  cpu.cpp  cpu.h  cpu_llvm.cpp  cuda_context.h  gpu.cpp  gpu.h  gpu_llvm.cpp  gpu_old.cpp  gpu_old.h  kernel.cpp  kernel.h  llvm_codegen_utils.cpp  llvm_codegen_utils.h  llvm_cpu.cpp  llvm_gpu.cpp  llvm_jit.cpp  llvm_jit.h  llvm_ptx.cpp  loop_gen.h  loopgen.cpp  loopgen.h  struct.cpp  struct.h  struct_llvm.cpp  struct_llvm.h
src/benchmark/: cache_size.cpp  jacobi.cpp  mpm3_details.cpp  simd.cpp  spgrid.cpp
src/camera/: pinhole.cpp  thinlens.cpp
src/codegen/: base.cpp  base.h  cpu.cpp  cpu.h  struct.h
src/common/: asset_manager.h  config.h  interface.cpp  interface.h  meta.h  utils.cpp  utils.h
src/core/: bit.cpp  bsdf.cpp  core.cpp  interface.cpp  interfaces.cpp  logging.cpp  meta.cpp  simulation3d.cpp  surface_material.cpp  testing.cpp
src/environment_map/: envmap.cpp
src/export/: export.cpp  export_dynamics.cpp  export_io.cpp  export_math.cpp  export_misc.cpp  export_visual.cpp  ndarray.cpp
src/fluid/: apic.cpp  euler_fluid.cpp  euler_fluid.h  flip_fluid.cpp  flip_smoke.h  fluid.cpp  fluid.h  fluid_3d.cpp  fluid_3d.h  fluid_constants.h  fluid_demo.cpp  fluid_demo.h  level_set.cpp  level_set.h  nbody.cpp  nbody.h  particle_visualization.cpp  particle_visualization.h  point_level_set.cpp  pressure_solver.cpp  pressure_solver.h  simulation3d.h  voronoi_flip_fluid.cpp  voronoi_flip_fluid.h
src/gui/: cocoa.cpp  gui.cpp  test_bemo.cpp  win32.cpp  win32gui.cpp  x11.cpp
src/hdr/: hdr.cpp  hdr_demo.cpp  hdr_demo.h  histogram_equalization.cpp  tone_mapper.h
src/heat/: heat_transfer.h  heat_transfer_demo.cpp
src/inc/: statements.inc.h  unary_op.h
src/io/: amal_base64.cpp  dcraw.cpp  dcraw.h  image_reader.cpp  importer.h  io.h  movie.h  ply.cpp
src/levelset/: levelset2d.cpp  levelset2d.h  sdf.cpp
src/math/: array_1d.h  array_2d.h  array_3d.cpp  array_3d.h  interpolation.h  linalg.h  math_utils.cpp  math_utils.h  stencils.h
src/mpm/: mpm.cpp  mpm.h  mpm3.cpp  mpm3.h  mpm_grid.cpp  mpm_grid.h  mpm_particle.h  mpm_utils.cpp  mpm_utils.h
src/passes/: eliminate_dup.cpp  ir_printer.cpp  loop_vectorize.cpp  lower_ast.cpp  slp_vectorize.cpp  statement_replace.cpp  type_check.cpp
src/physics/: physics_constants.cpp  physics_constants.h  spectrum.cpp  spectrum.h  spectrum_demo.cpp  spectrum_demo.h
src/point_cloud/: point_cloud.cpp  point_cloud.h  point_cloud_demo.cpp
src/python/: exception.cpp  export.cpp  export_dynamics.cpp  export_io.cpp  export_math.cpp  export_misc.cpp  export_ndarray.cpp  export_visual.cpp  ndarray.cpp  python_interface.cpp  python_interface.h  python_interface_utils.cpp  python_script.h
src/renderer/: amcmcppm.cpp  averager.h  bdpt.cpp  bidirectional_renderer.cpp  bidirectional_renderer.h  bsdf.cpp  bsdf.h  camera.cpp  camera.h  constants.cpp  discrete_sampler.h  envmap.cpp  envmap.h  framebuffer.cpp  framebuffer.h  geometry_primitives.h  hash_grid.h  lt.cpp  markov_chain.h  material.cpp  material.h  mcmcups.cpp  mdas.cpp  mlt.cpp  noise.cpp  pt.cpp  ray_intersection.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  sampler.cpp  sampler.h  scene.cpp  scene.h  scene_geometry.h  sobol.cpp  sobol.h  sppm.cpp  sppm.h  (+10 more)
src/rigid2d/: BodyLinker.cpp  BodyLinker.h  Circle.h  CollisionTest.cpp  Color.cpp  Color.h  Constants.cpp  Constants.h  Constraints.cpp  Constraints.h  Designer.cpp  Designer.h  Game.cpp  Game.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  MemoryAllocator.cpp  MemoryAllocator.h  Object.cpp  Object.h  Physics.cpp  Physics.h  Polygon.cpp  Polygon.h  QuickIntersectionTest.h  Scoper.cpp  Scoper.h  Settings.cpp  Settings.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Tests.cpp  Timer.cpp  Timer.h  (+2 more)
src/runtime/: context.cpp  runtime.cpp
src/sampler/: sampler.cpp  sobol.cpp  sobol.h
src/simulation/: fluid_3d.cpp  fluid_3d.h  nbody.cpp  poisson_solver.cpp  poisson_solver3d.cpp
src/simulation3d/: fluid_3d.cpp  fluid_3d.h  nbody.cpp  poisson_solver2d.cpp  poisson_solver3d.cpp
src/sufrace_material/: noise.cpp  texture.cpp
src/surface_material/: bsdf.cpp  microfacet.cpp  surface_material.cpp  transparent.cpp
src/system/: demangling.cpp  loader.cpp  memory.cpp  opengl.cpp  opengl.h  run_tests.cpp  threading.cpp  threading.h  timer.cpp  timer.h  traceback.cpp
src/tests/: allocator.cpp  atomics.cpp  benchmark_vdb.cpp  cnn.cpp  compiler_basics.cpp  diff_conv.cpp  diff_mpm.cpp  dynamic.cpp  fem.cpp  (+32 more)
(+4603 files in other folders)
