file(GLOB TAICHI_SOURCE "*/*/*/*.cpp" "*/*/*.cpp" "*/*.cpp" "*.cpp" "*/*/*/*.h" "*/*/*.h" "*/*.h" "*.h")

add_library(taichi_dll SHARED ${TAICHI_SOURCE})
message(OpenGL ${GLEW3_LIBRARIES})
target_link_libraries(taichi_dll ${OPENGL_LIBRARIES})
if (NOT WIN32)
	target_link_libraries(taichi_dll pthread)
endif()
target_link_libraries(taichi_dll ${GLFW3_LIBRARY})
if (APPLE)
    target_link_libraries(taichi_dll glfw3)
endif()
target_link_libraries(taichi_dll ${GLEW_LIBRARY})
target_link_libraries(taichi_dll ${GLEW_LIBRARIES})
target_link_libraries(taichi_dll ${EMBREE_LIBRARY})
target_link_libraries(taichi_dll ${PYTHON_LIBRARIES})
target_link_libraries(taichi_dll ${ANN_LIBRARIES})
target_link_libraries(taichi_dll ${ASSIMP_LIBRARY_RELEASE})
target_link_libraries(taichi_dll ${assimp_LIBRARIES})
target_link_libraries(taichi_dll ${Boost_LIBRARIES})
if (UNIX)
	target_link_libraries(taichi_dll boost_system)
	target_link_libraries(taichi_dll boost_python)
endif()

foreach(source IN LISTS TAICHI_SOURCE)
    get_filename_component(source_path "${source}" PATH)
    string(REPLACE "/" "\\" source_path_msvc "${source_path}")
    source_group("${source_path_msvc}" FILES "${source}")
endforeach()
