file(GLOB TAICHI_SOURCE "*/*/*/*.cpp" "*/*/*.cpp" "*/*.cpp" "*.cpp" "*/*/*/*.h" "*/*/*.h" "*/*.h" "*.h")

add_library(taichi SHARED ${TAICHI_SOURCE})
message(OpenGL ${GLEW3_LIBRARIES})
target_link_libraries(taichi ${OPENGL_LIBRARIES})
if (NOT WIN32)
	target_link_libraries(taichi pthread)
endif()
target_link_libraries(taichi ${GLFW3_LIBRARY})
if (APPLE)
    target_link_libraries(taichi glfw3)
endif()
target_link_libraries(taichi ${GLEW_LIBRARY})
target_link_libraries(taichi ${GLEW_LIBRARIES})
target_link_libraries(taichi ${EMBREE_LIBRARY})
target_link_libraries(taichi ${PYTHON_LIBRARIES})
target_link_libraries(taichi ${ANN_LIBRARIES})
target_link_libraries(taichi ${ASSIMP_LIBRARY_RELEASE})
target_link_libraries(taichi ${assimp_LIBRARIES})
target_link_libraries(taichi ${Boost_LIBRARIES})
if (UNIX)
	target_link_libraries(taichi boost_system)
	target_link_libraries(taichi boost_python)
endif()

foreach(source IN LISTS TAICHI_SOURCE)
    get_filename_component(source_path "${source}" PATH)
    string(REPLACE "/" "\\" source_path_msvc "${source_path}")
    source_group("${source_path_msvc}" FILES "${source}")
endforeach()
