file(GLOB TAICHI_SOURCE "*/*/*/*.cpp" "*/*/*.cpp" "*/*.cpp" "*.cpp" "*/*/*/*.h" "*/*/*.h" "*/*.h" "*.h")

add_library(${CORE_LIBRARY_NAME} SHARED ${TAICHI_SOURCE})
message(OpenGL ${GLEW3_LIBRARIES})
target_link_libraries(${CORE_LIBRARY_NAME} ${OPENGL_LIBRARIES})
if (NOT WIN32)
	target_link_libraries(${CORE_LIBRARY_NAME} pthread)
endif()
target_link_libraries(${CORE_LIBRARY_NAME} ${GLFW3_LIBRARY})
if (APPLE)
    target_link_libraries(${CORE_LIBRARY_NAME} glfw3)
endif()
target_link_libraries(${CORE_LIBRARY_NAME} ${GLEW_LIBRARY})
target_link_libraries(${CORE_LIBRARY_NAME} ${GLEW_LIBRARIES})
target_link_libraries(${CORE_LIBRARY_NAME} ${EMBREE_LIBRARY})
target_link_libraries(${CORE_LIBRARY_NAME} ${PYTHON_LIBRARIES})
target_link_libraries(${CORE_LIBRARY_NAME} ${ANN_LIBRARIES})
target_link_libraries(${CORE_LIBRARY_NAME} ${ASSIMP_LIBRARY_RELEASE})
target_link_libraries(${CORE_LIBRARY_NAME} ${assimp_LIBRARIES})
target_link_libraries(${CORE_LIBRARY_NAME} ${Boost_LIBRARIES})
if (UNIX)
	target_link_libraries(${CORE_LIBRARY_NAME} boost_system)
	target_link_libraries(${CORE_LIBRARY_NAME} boost_python)
endif()

foreach(source IN LISTS TAICHI_SOURCE)
    get_filename_component(source_path "${source}" PATH)
    string(REPLACE "/" "\\" source_path_msvc "${source_path}")
    source_group("${source_path_msvc}" FILES "${source}")
endforeach()

if(MSVC)
    set_property(TARGET ${CORE_LIBRARY_NAME} APPEND PROPERTY LINK_FLAGS /DEBUG)
endif()